[gd_scene load_steps=5 format=3 uid="uid://digwssbx8ooil"]

[ext_resource type="Script" path="res://world.gd" id="1_034ps"]
[ext_resource type="TileSet" uid="uid://coew56js04ywn" path="res://tilemap.tres" id="1_b1dug"]
[ext_resource type="Resource" uid="uid://bfukqmd37indk" path="res://game_state.tres" id="2_3snys"]
[ext_resource type="PackedScene" uid="uid://dy0sjut27553q" path="res://battle_ui.tscn" id="3_a54y4"]

[node name="World" type="Node2D"]
script = ExtResource("1_034ps")
game_state = ExtResource("2_3snys")

[node name="MainCamera" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="PartyStartPos" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="BattleUI" parent="." instance=ExtResource("3_a54y4")]
unique_name_in_owner = true

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(4, 4)
tile_set = ExtResource("1_b1dug")
format = 2
layer_0/name = "Floor"
layer_1/name = "Walls"
layer_1/tile_data = PackedInt32Array()

[node name="BattleAreas" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sorted" type="Node2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
